Fix all heights at 100%. Fix font sizing. Fix name alignment. Change text colours. TODO: Make the padding and margin values on each element more understandable

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,47 +1,54 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:200,400,800);
+html, body, .container {
+    height: 100%;
+    background-color: rgba(0,0,0,0.2);
+    padding: 0;
+}
+
 body {
     background:url("/img/bright_squares.png") repeat;
     font-family: 'Lato', serif;
 }
 
-.container {
-    margin-top: 10%;
-    margin-bottom: 10%;
-    background-color: rgba(0, 0, 0,0.2);
-    height: 400px;
-    width: 90%;
+.grid{
+    margin-left: -5%;
+    width: 100%;
+    margin: 0;
 }
 
-.grid, .message-container, .left-container, .right-container {
+.grid, .message-container, .left-container, .right-container{
     height: 100%;
 }
 
 .left-container {
     border-right: 1px solid rgba(0,0,0,0.1);
+    margin: 0;
+    padding-top: 2.5%;
+    padding-left: 3.5%;
+    background-color: rgba(0, 0, 0,0.8);
 }
 
 .name-container {
     margin: 0 auto;
     padding-top: 20%;
-    padding-bottom: 7.5%;
+    padding-bottom: 10%;
 }
 
 .name {
-    font-size:1.6em;
-    font-weight: 800;
+    font-weight: 400;
     line-height: 1.2em;
     letter-spacing: 4px;
-    text-align: center;
+    text-align: left;
     width: 100%;
     margin: 0 auto;
 }
 
 #first-name {
-    margin-left: -20%;
+    margin-left:10%;
 }
 
 #last-name {
-    margin-left: -5%;
+    margin-left: 15%;
 }
 
 .navBar {
@@ -49,10 +56,8 @@ body {
 }    
 .element {
     margin-bottom:2.5%;
-    font-size:100%;
     text-align:left;
     margin-left: 10%;
-    color: rgb(74,66,71);
     -webkit-transition: margin 0.5s ease-out; 
     -moz-transition: margin 0.5s ease-out; 
     -o-transition: margin 0.5s ease-out;
@@ -61,33 +66,49 @@ body {
     padding-left: 5%;
 }
 
-.element:hover,a:hover {
-    color:gray;
+.element:hover, a:hover, .name {
+    color:#95a5a6;
+}
+.element, a {
+    color: #ecf0f1;
 }
 a {
     text-decoration:none;
-    color: rgb(74,66,71);
 }
 li {
     list-style-type:none;
 }
-
 .message-container {
     display: table;
+    padding-left: 5%;
+    width: 100%;
+    height: 100%;
 }
 .message {
     display: table-cell;
     vertical-align: middle;
+    font-size: 1em;
+}
+.name {
+    font-size:1.7em;
+}
+.element {
+    font-size:1em;
 }
 @media screen and (max-width: 800px) {
     .name {
-        font-size:120%
+        font-size:1.7em;
+    }
+    .element {
+        font-size: 1em;
     }
 }
 @media screen and (max-width: 650px) {
-    .container {
-        height: 80%;
-        margin-top: 5%;
+    .container, .grid, .message-container, .left-container, .right-container{
+        height: auto;
+    }
+    .grid {
+        margin: 0;
     }
     .name-container {
         padding-top: 5%;
@@ -113,6 +134,9 @@ li {
         width: 100%;
         border-right: none;
         border-bottom: 1px solid rgba(0,0,0,0.1); 
+    }
+    .name {
+        text-align: center;
     }
     #first-name {
         margin-left: -5%;
